<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>palletron_gazebo</name>
  <version>0.1.0</version>
  <description>This packages contains the files to simulate the Palletron on Gazebo</description>
  <maintainer email="thulioguilherme@hotmail.com">Thulio Amorim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>aws_robomaker_small_warehouse_world</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
